# ToolFence

./: .gitignore  .pre-commit-hooks.yaml  README.md  THIRD_PARTY_NOTICES.md  action.yml  pyproject.toml
docs/: architecture.md  clawguard-port.md  mcp-proxy.md  roadmap.md  ruleset.md  threat-model.md
examples/: github-action.yml  mcp-tool-call-file.json  mcp-tool-call-shell.json  mcp-tools-list-response.json  runtime-event.json  sample-mcp-config.json
rules/: README.md  builtin-rules.json  schema.json
rules/allowlist/: mcp-servers.json  skills.json
rules/blocklist/: mcp-servers.json  skills.json
rules/policies/: runtime-default.json
rules/proxy/: mcp-proxy-policy.json
rules/runtime/: clawguard-runtime.json
src/toolfence/: __init__.py  cli.py  firewall.py  models.py  utils.py
src/toolfence/analyzers/: __init__.py  engine.py  registry.py
src/toolfence/discovery/: __init__.py  clients.py  collector.py  mcp.py  skills.py
src/toolfence/proxy/: __init__.py  mcp.py  models.py  policy.py
src/toolfence/reporting/: __init__.py  json_report.py  sarif.py  summary.py
src/toolfence/runtime/: __init__.py  approval.py  audit.py  engine.py  models.py  normalizer.py  panic.py  sanitizer.py  script_analyzer.py
tests/: test_proxy.py  test_runtime.py  test_scan.py
