[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolfence"
version = "0.2.0"
description = "Endpoint inventory, risk scanning, and policy groundwork for AI agent tools, MCP servers, and skills."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "ToolFence Contributors" }
]
keywords = [
  "mcp",
  "skills",
  "ai-agent",
  "security",
  "sbom",
  "sarif",
  "dlp",
  "endpoint-security"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/toolfence/toolfence"
Issues = "https://github.com/toolfence/toolfence/issues"

[project.scripts]
toolfence = "toolfence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
